--- a/Project2.html
+++ b/Project2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="M (1).png">
+        <img class="logo" src="M.png">
         <nav>
             <ul class="nav-list">
                 <li class="nav-item">   
@@ -19,15 +19,15 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Projects.html"> 
+                    <a class="nav-link" href="#Projects"> 
                         <p class="nav-desc">
-                            <mark class="Selected-Nav">Projects</mark>
+                            Projects
                         </p>
                     </a>
                     
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Skills.html"> 
+                    <a class="nav-link" href="#Skills"> 
                         <p class="nav-desc">
                             Skills
                         </p>
