--- a/Skills.html
+++ b/Skills.html
@@ -16,7 +16,7 @@
                       
                     <a class="nav-link" href="Portfolio.html"> 
                         <p class="nav-desc">
-                            <mark class="Selected-Nav">Home</mark>
+                            Home
                         </p> 
                     </a>
                 </li>
@@ -31,10 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="Skills.html"> 
                         <p class="nav-desc">
-                            Skills
+                            <mark class="Selected-Nav">Skills</mark>
                         </p>
                     </a>
-                    
                 </li>
             </ul>
         </nav>
@@ -43,96 +42,6 @@
 
     <hr>
     <main>
-        <section class="About-Me">
-            <h1 class="Intro">
-                Hi, I'm Marco Dava
-            </h1>
-            <p class="Marco-Desc">A Second Year McMaster Software Engineering Student, with a strong foundation in web development and experience in collaborative enviroments.</p>
-            <ul class="Socials-List">
-                <li class="Socials-Item">
-                    <a href="https://www.linkedin.com/in/marcodava/">
-                        <img class="Socials-Icons" src="icons8-linkedin.svg" alt="LinkedIn Logo">
-                    </a>
-                </li>
-                <li class="Socials-Item">
-                    <a href="https://github.com/MarcoDava">
-                        <img class="Socials-Icons" src="icons8-github.svg" alt="Github Logo">
-                    </a>
-                </li>
-                <li class="Socials-Item">
-                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=marco.a.dava@gmail.com&su=Hey There!&body=Email whatever you desire">
-                        <img class="Socials-Icons" src="icons8-gmail.svg" alt="Gmail Logo">
-                    </a>
-                </li>
-                <li class="Socials-Item">
-                    <a href="https://leetcode.com/u/MarcoDava/">
-                        <img class="Socials-Icons" src="leetcode-icon-430x512-6l72chsk.png" alt="Leetcode Logo">
-                    </a>
-                </li>
-            </ul>
-        </section>
-        <hr>
-        <section class="Projects">
-            <h1 class="Intro">Projects</h1>
-            <ul class="Project-List">
-                <li class="Project-Item">
-                    <p class="Project-Title">
-                        ScriptSense
-                    </p>
-                    <a href="Project1.html">
-                        <img class="Project-Image" src="360_F_954073836_VOtTsC5J8KNoiWMXYY5JxfwfaXproZoj.jpg" alt="Project 1">
-                    </a>
-                    <p class="Project-Desc">
-                        A Tensorflow Handwriting Recognition Web Application that can extract information from imported files.
-                    </p>
-                </li>
-                <li class="Project-Item">
-                    <p class="Project-Title">
-                        Basra
-                    </p>
-                    <a href="Portfolio.html">
-                        <img class="Project-Image" src="simple-playing-cards-isolated-on-white-background-vector.jpg" alt="Project 2">
-                    </a>
-                    <p class="Project-Desc">
-                        An interactive card game played on the console with a computer player algorithm, coded using C.
-                    </p>
-                </li>
-                <li class="Project-Item">
-                    <p class="Project-Title">
-                        Tic Tac Toe
-                    </p>
-                    <a href="Portfolio.html">
-                        <img class="Project-Image" src="tic-tac-toe-game-symbol-icon-in-line-style-design-isolated-on-white-background-editable-stroke-free-vector.jpg" alt="Project 3">
-                    </a>
-                    <p class="Project-Desc">
-                        An interactive console game that with an automatic computer player.
-                    </p>
-                </li>
-                <li class="Project-Item">
-                    <p class="Project-Title">
-                        Q-Bot Pathing
-                    </p>
-                    <a href="Portfolio.html">
-                        <img class="Project-Image" src="Qbot.png" alt="Project 4">
-                    </a>
-                    <p class="Project-Desc">
-                        Coded a roomba to follow a line around in a loop and dumped an object at a specified location using python.
-                    </p>
-                </li>
-                <li class="Project-Item">
-                    <p class="Project-Title">
-                        Q-Arm Algorithm
-                    </p>
-                    <a href="Portfolio.html">
-                        <img class="Project-Image" src="QArm.jpg" alt="Project 5">
-                    </a>
-                    <p class="Project-Desc">
-                        Coded a robot arm to transfer medical containers into autoclaves, capable of being controlled by a user.
-                    </p>
-                </li>
-            </ul>
-        </section>
-        <hr>
         <section class="Skills">
             <h1 class="Intro">Skills</h1>
             <p class="Marco-Skills">Languages:</p>
