Adding more content to projects

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <nav>
+            
             <img class="logo" src="M (1).png">
             <ul class="nav-list">
                 
@@ -44,10 +45,16 @@
     <hr>
     <main>
         <section class="About-Me">
+            <!--Add a picture of yourself, align to the left, have text wrap maybe -->
             <h1 class="Intro">
                 Hi, I'm Marco Dava
             </h1>
-            <p class="Marco-Desc">A Second Year McMaster Software Engineering Student, with a strong foundation in web development and experience in collaborative enviroments.</p>
+            <p class="Marco-Desc">
+                A Second Year McMaster Software Engineering Student, with a strong foundation in web development 
+                and experience in collaborative enviroments.<br><br>
+
+                Visit my socials:
+            </p>
             <ul class="Socials-List">
                 <li class="Socials-Item">
                     <a href="https://www.linkedin.com/in/marcodava/">
@@ -70,7 +77,12 @@
                     </a>
                 </li>
             </ul>
+            <p class="Marco-Desc">
+                or see my <a class="Resume-Link" href="https://drive.google.com/drive/u/0/home">Resume</a>:
+            </p>
         </section>
+        <hr>
+        <br class="Seperators">
         <hr>
         <section class="Projects">
             <h1 class="Intro">Projects</h1>
@@ -90,7 +102,7 @@
                     <p class="Project-Title">
                         Basra
                     </p>
-                    <a href="Portfolio.html">
+                    <a href="Project2.html">
                         <img class="Project-Image" src="simple-playing-cards-isolated-on-white-background-vector.jpg" alt="Project 2">
                     </a>
                     <p class="Project-Desc">
@@ -101,7 +113,7 @@
                     <p class="Project-Title">
                         Tic Tac Toe
                     </p>
-                    <a href="Portfolio.html">
+                    <a href="Project3.html">
                         <img class="Project-Image" src="tic-tac-toe-game-symbol-icon-in-line-style-design-isolated-on-white-background-editable-stroke-free-vector.jpg" alt="Project 3">
                     </a>
                     <p class="Project-Desc">
@@ -112,7 +124,7 @@
                     <p class="Project-Title">
                         Q-Bot Pathing
                     </p>
-                    <a href="Portfolio.html">
+                    <a href="Project4.html">
                         <img class="Project-Image" src="Qbot.png" alt="Project 4">
                     </a>
                     <p class="Project-Desc">
@@ -123,15 +135,28 @@
                     <p class="Project-Title">
                         Q-Arm Algorithm
                     </p>
-                    <a href="Portfolio.html">
+                    <a href="Project5.html">
                         <img class="Project-Image" src="QArm.jpg" alt="Project 5">
                     </a>
                     <p class="Project-Desc">
                         Coded a robot arm to transfer medical containers into autoclaves, capable of being controlled by a user.
                     </p>
                 </li>
+                <li class="Project-Item">
+                    <p class="Project-Title">
+                        Math Mania
+                    </p>
+                    <a href="Project5.html">
+                        <img class="Project-Image" src="QArm.jpg" alt="Project 5">
+                    </a>
+                    <p class="Project-Desc">
+                        An interactive GUI math game with simple operations and a timer. Stores scores in a leaderboard.
+                    </p>
+                </li>
             </ul>
         </section>
+        <hr>
+        <br class="Seperators">
         <hr>
         <section class="Skills">
             <h1 class="Intro">Skills</h1>
@@ -190,7 +215,7 @@
             <p class="Marco-Skills">Frameworks:</p>
             <ul class="Skills-List">
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="JavaFX_Logo.png" alt="JavaFX Logo">
+                    <img class="Skills-Icons" src="java.png" alt="JavaFX Logo">
                     <p class="Skills-Desc">JavaFX</p>
                 </li>
                 <li class="Skills-Item">    
@@ -206,6 +231,33 @@
 
 
     </main>
+    <footer>
+        <ul class="Socials-List">
+            <li class="Socials-Item">
+                <a href="https://www.linkedin.com/in/marcodava/">
+                    <img class="Socials-Icons" src="icons8-linkedin-modified.svg" alt="LinkedIn Logo">
+                </a>
+            </li>
+            <li class="Socials-Item">
+                <a href="https://github.com/MarcoDava">
+                    <img class="Socials-Icons" src="icons8-github-modified.svg" alt="Github Logo">
+                </a>
+            </li>
+            <li class="Socials-Item">
+                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=marco.a.dava@gmail.com&su=Hey There!&body=Email whatever you desire">
+                    <img class="Socials-Icons" src="icons8-gmail-modified.svg" alt="Gmail Logo">
+                </a>
+            </li>
+            <li class="Socials-Item">
+                <a href="https://leetcode.com/u/MarcoDava/">
+                    <img class="Socials-Icons" src="leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
+                </a>
+            </li>
+        </ul>
+        <p class="Footer-Desc">
+            Copyright © Marco 2024, All rights reserved
+        </p>
+    </footer>
 </body>
 
 
