--- a/Project1.html
+++ b/Project1.html
@@ -43,8 +43,8 @@
     <main>
         <section class="Project1">
             <! -- Add a picture of the web application here-->
-            <h1>ScriptSense</h1>
-            <p class="Marco-Desc">
+            <h1 class="Intro">ScriptSense</h1>
+            <p class="Project1-Desc">
                 Timeline : December 2024 - January 2025<br>
                 In this project I created a Tensorflow Handwriting Recognition Web Application. This application was made to solve documents that 
                 do not support cursor selection over text. The application is also able to accurately distinguish handwritten words. The interface 
@@ -52,7 +52,18 @@
             </p>
             <br><br>
             <h2 class="Project-Headers">
-                <mark class="Project-Headers-Background">Skills Gained:</mark>
+                <mark class="Project-Headers-Background">How I did it:</mark>
+            </h2>
+            <! -- Add a picture of the web application here-->
+            <p class="Project1-Desc">
+                This project is heavily inspired by the various resources online. The model takes in the colored and white pixels, compressing the 
+                image or drawn letter into a lower resolution matrix of 1's and 0's. From this compression, the time taken to distinguish the letters 
+                becomes faster. The AI then returns what the letter best resembles. To achieve this model, I used python and tensorflow. Tensorflow 
+                provided the necessary learning models for the AI to recognize the different characters. <br><br>
+            </p>
+            <! -- Add a picture of the web application here-->
+            <h2 class="Project-Headers">
+                <mark class="Project-Headers-Background">Lessons Learned:</mark>
             </h2>
         </section>
     </main>
