--- a/Project2.html
+++ b/Project2.html
@@ -21,7 +21,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#Projects"> 
                         <p class="nav-desc">
-                            Projects
+                            <mark class="Selected-Nav">Projects</mark>
                         </p>
                     </a>
                     
