--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marco's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="PortfolioStyle.css">
-    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" /> 
+    <link rel="icon" href="M (1).png">
 </head>
 <body>
     <header>
@@ -78,7 +79,7 @@
                 </li>
             </ul>
             <p class="Marco-Desc">
-                or see my <a class="Resume-Link" href="https://drive.google.com/drive/u/0/home">Resume</a>:
+                or see my <a class="Resume-Link" href="https://drive.google.com/file/d/12zDSd7IU07E_8lI-Gtuad-hPNNzH2jik/view?usp=sharing">Resume</a>:
             </p>
         </section>
         <hr>
@@ -147,7 +148,7 @@
                         Math Mania
                     </p>
                     <a href="Project5.html">
-                        <img class="Project-Image" src="QArm.jpg" alt="Project 5">
+                        <img class="Project-Image" src="FastMathQuizLogo.png" alt="Project 5">
                     </a>
                     <p class="Project-Desc">
                         An interactive GUI math game with simple operations and a timer. Stores scores in a leaderboard.
@@ -218,13 +219,9 @@
                     <img class="Skills-Icons" src="java.png" alt="JavaFX Logo">
                     <p class="Skills-Desc">JavaFX</p>
                 </li>
-                <li class="Skills-Item">    
-                    <img class="Skills-Icons" src="tensorflow.svg" alt="Tensorflow Logo">
-                    <p class="Skills-Desc">Tensorflow</p>    
-                </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="pandas.svg" alt="Pandas Logo">
-                    <p class="Skills-Desc">Pandas</p>  
+                    <img class="Skills-Icons" src="flask.png" alt="Flask Logo">
+                    <p class="Skills-Desc">Flask</p>  
                 </li>
             </ul>
         </section>
@@ -235,17 +232,17 @@
         <ul class="Socials-List">
             <li class="Socials-Item">
                 <a href="https://www.linkedin.com/in/marcodava/">
-                    <img class="Socials-Icons" src="icons8-linkedin-modified.svg" alt="LinkedIn Logo">
+                    <img class="Socials-Icons" src="linkedin.png" alt="LinkedIn Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://github.com/MarcoDava">
-                    <img class="Socials-Icons" src="icons8-github-modified.svg" alt="Github Logo">
+                    <img class="Socials-Icons" src="63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=marco.a.dava@gmail.com&su=Hey There!&body=Email whatever you desire">
-                    <img class="Socials-Icons" src="icons8-gmail-modified.svg" alt="Gmail Logo">
+                    <img class="Socials-Icons" src="325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
                 </a>
             </li>
             <li class="Socials-Item">
