fixing bugs in code

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -47,9 +47,14 @@
     <main>
         <section class="About-Me">
             <!--Add a picture of yourself, align to the left, have text wrap maybe -->
+
+
             <h1 class="Intro">
                 Hi, I'm Marco Dava
             </h1>
+            <div class="Picture-Of-Marco">
+                <img class="Personal-Picture" src="Personal_Picture.jpg" alt="Picture of Marco">
+             </div>
             <p class="Marco-Desc">
                 A Second Year McMaster Software Engineering Student, with a strong foundation in web development 
                 and experience in collaborative enviroments.<br><br>
