--- a/Project2.html
+++ b/Project2.html
@@ -43,12 +43,12 @@
     <main>
         <section class="Project1">
             <! -- Add a picture of the web application here-->
-            <h1>ScriptSense</h1>
+            <h1>Basra</h1>
             <p class="Marco-Desc">
-                Timeline : December 2024 - January 2025<br>
-                In this project I created a Tensorflow Handwriting Recognition Web Application. This application was made to solve documents that 
-                do not support cursor selection over text. The application is also able to accurately distinguish handwritten words. The interface 
-                is designed to be user-friendly with easy importing of pictures.
+                Timeline : November 2024 - December 2024<br>
+                In this project, our team was tasked to create an application using C. We decided to create the 
+                middle eastern card game called Basra. What made us choose this game is the multiple complicated 
+                rules that would be interesting to implement
             </p>
             <br><br>
             <h2 class="Project-Headers">
