Filling Project content

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -84,7 +84,7 @@
                 </li>
             </ul>
             <p class="Marco-Desc">
-                or see my <a class="Resume-Link" href="https://drive.google.com/file/d/12zDSd7IU07E_8lI-Gtuad-hPNNzH2jik/view?usp=sharing">Resume</a>:
+                or see my <a class="link" href="https://drive.google.com/file/d/12zDSd7IU07E_8lI-Gtuad-hPNNzH2jik/view?usp=sharing">Resume</a>:
             </p>
         </section>
         <hr>
@@ -227,6 +227,30 @@
                 <li class="Skills-Item">
                     <img class="Skills-Icons" src="flask.png" alt="Flask Logo">
                     <p class="Skills-Desc">Flask</p>  
+                </li>
+            </ul>
+            <br>
+            <p class="Marco-Skills">Developer Tools:</p>
+            <ul class="Skills-List">
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="icons8-github.svg" alt="Github Logo">
+                    <p class="Skills-Desc">Github</p>
+                </li>
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="Maven.png" alt="Maven Logo">
+                    <p class="Skills-Desc">Maven</p>  
+                </li>
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="Linux.png" alt="Linux Logo">
+                    <p class="Skills-Desc">Linux</p>  
+                </li>
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="Git.png" alt="Git Logo">
+                    <p class="Skills-Desc">Git</p>  
+                </li>
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="visual-studio-code-icon-512x510-jfeof688.png" alt="VsCode Logo">
+                    <p class="Skills-Desc">VSCode</p>  
                 </li>
             </ul>
         </section>
