adding more content to projects

--- a/Project4.html
+++ b/Project4.html
@@ -48,7 +48,7 @@
             </p>
             <! -- Add a picture of the web application here-->
             <img src="TicTacToeImage.jpg" class="Project-Images">
-            <h1 class="Intro">Tic Tac Toe</h1>
+            <h1 class="Intro">Q bot Pathing Algorithm</h1>
             <p class="Project1-Desc">
                 Timeline : November 2024 - December 2024<br>
                 In this project I created a console version of tic-tac-toe with a player and computer mode. The project utilized important principles 
