temporarily revealing images

--- a/Project4.html
+++ b/Project4.html
@@ -81,12 +81,8 @@
             </h2>
             <ul class="Skills-List">
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="java.png" alt="Java Logo">
-                    <p class="Skills-Desc">Java</p>
-                </li>
-                <li class="Skills-Item">    
-                    <img class="Skills-Icons" src="Maven.png" alt="Maven Logo">
-                    <p class="Skills-Desc">Maven</p>    
+                    <img class="Skills-Icons" src="python.png" alt="Python Logo">
+                    <p class="Skills-Desc">Python</p>
                 </li>
             </ul>
         </section>
