--- a/Portfolio.html
+++ b/Portfolio.html
@@ -152,8 +152,8 @@
                     <p class="Project-Title">
                         Math Mania
                     </p>
-                    <a href="Project5.html">
-                        <img class="Project-Image" src="FastMathQuizLogo.png" alt="Project 5">
+                    <a href="Project6.html">
+                        <img class="Project-Image" src="FastMathQuizLogo.png" alt="Project 6">
                     </a>
                     <p class="Project-Desc">
                         An interactive GUI math game with simple operations and a timer. Stores scores in a leaderboard.
@@ -251,6 +251,18 @@
                 <li class="Skills-Item">
                     <img class="Skills-Icons" src="visual-studio-code-icon-512x510-jfeof688.png" alt="VsCode Logo">
                     <p class="Skills-Desc">VSCode</p>  
+                </li>
+            </ul>
+            <br>
+            <p class="Marco-Skills">Technical Skills:</p>
+            <ul class="Skills-List">
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="HardwareIcon.png" alt="Hardware Logo">
+                    <p class="Skills-Desc">Hardware</p>
+                </li>
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="CAD.png" alt="CAD Logo">
+                    <p class="Skills-Desc">CAD</p>
                 </li>
             </ul>
         </section>
