--- a/Project2.html
+++ b/Project2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="M.png">
+        <img class="logo" src="M (1).png">
         <nav>
             <ul class="nav-list">
                 <li class="nav-item">   
@@ -20,7 +20,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#Projects"> 
+                    <a class="nav-link" href="Projects.html"> 
                         <p class="nav-desc">
                             <mark class="Selected-Nav">Projects</mark>
                         </p>
@@ -28,7 +28,7 @@
                     
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#Skills"> 
+                    <a class="nav-link" href="Skills.html"> 
                         <p class="nav-desc">
                             Skills
                         </p>
