--- a/Project6.html
+++ b/Project6.html
@@ -44,36 +44,29 @@
     <main>
         <section class="Project3">
             <! -- Add a picture of the web application here-->
-            <img src="Qbot2(1).jpg" class="Project-Images">
-            <h1 class="Intro">Q bot Pathing Algorithm</h1>
+            <h1 class="Intro">Math Mania</h1>
             <p class="Project1-Desc">
-                Timeline : January 2024 - February 2024<br>
-                In this project, my team was in charge of creating a program for a roomba to follow a line. This program involved using a 
-                simulation software to simulate how the Qbot would follow the path.  Once the Qbot followed the path, at the end it needed 
-                to drop an object into the objective. However, transferring from software simulations to the real Qbot was still challenging.
-                I also helped design mechanisms for the dumping of the object onto the mechanism.
+                Timeline : Janurary 2023 - March 2023<br>
+                This is a simple GUI math quiz game that would time users and track scores. It is able to track usernames and store their scores into a file as a leaderboard system. 
+                My group split work amongst ourselves and I was in charge of putting all our functions togehter. 
             </p>
             <br>
             <h2 class="Project-Headers">
                 <mark class="Project-Headers-Background">How I did it:</mark>
             </h2>
             <p class="Project1-Desc">
-                To create the program, our team delegated tasks to each of us. I was in charge of color detection. The various sensors on the 
-                Qbot allowed for us to be able to detect where the objective is and if we are still on the line. If the sensor detected that
-                the color underneath it was not correct, it would correct its path until it detects the correct color again. This however, 
-                did not come without any issues.
+                We used the JavaFX Framework and designed the GUI. We had one person focus on the design of it while the rest of us worked on backend. On top of putting all the functions together, 
+                I designed the timer of the game. I had everyone email their respective codes to me and I would figure out a way to split them into their classes. Using these classes, I was able to 
+                connect all the functions together seamlessly
             </p>
             <br>
-            <img src="QbotProgram.png" class="Project-Images">
+            <img src="MathQuizGame.png" class="Project-Images">
             <h2 class="Project-Headers">
                 <mark class="Project-Headers-Background">Mistakes Made:</mark>
             </h2>
             <p class="Marco-Desc">
-                The problems I faced was knowing how to get the bot back into the line. brainstorming with my team, we found a way to put it 
-                back on track. We created an algorithm to ensure that the bot was on the inner side of the loop, so that if it went off track, 
-                it would only have to turn one way to get back on track. however, we knew if this was not a loop, this algorithm would not be so 
-                successful. Reflecting back to it, instead of the algorith that would keep it on the inner loop, it would instead swerve within 
-                a certain radius until it got back on track. For the dumping Mechanism, I used CAD and 3D printed the arms. 
+                The problems I faced was the mismatching logic in all our functions. the team did not come to a collective design before the assignment, thus, we had code that did not work well with 
+                each other. We had many group meetings to come up with how to solve with the problem. I had to change a lot of things however, I came to a successful finish. 
                 <br><br>
             </p>
             <h2 class="Project-Headers">
@@ -81,16 +74,12 @@
             </h2>
             <ul class="Skills-List">
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="python.png" alt="Python Logo">
-                    <p class="Skills-Desc">Python</p>
+                    <img class="Skills-Icons" src="java.png" alt="JavaFX Logo">
+                    <p class="Skills-Desc">JavaFx</p>
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="HardwareIcon.png" alt="Hardware Logo">
-                    <p class="Skills-Desc">Hardware</p>
-                </li>
-                <li class="Skills-Item">
-                    <img class="Skills-Icons" src="CAD.png" alt="CAD Logo">
-                    <p class="Skills-Desc">CAD</p>
+                    <img class="Skills-Icons" src="java.png" alt="Java Logo">
+                    <p class="Skills-Desc">Java</p>
                 </li>
             </ul>
         </section>
