--- a/Projects.html
+++ b/Projects.html
@@ -62,7 +62,7 @@
                     <p class="Project-Title">
                         Basra
                     </p>
-                    <a href="Portfolio.html">
+                    <a href="Project2.html">
                         <img class="Project-Image" src="simple-playing-cards-isolated-on-white-background-vector.jpg" alt="Project 2">
                     </a>
                     <p class="Project-Desc">
@@ -73,7 +73,7 @@
                     <p class="Project-Title">
                         Tic Tac Toe
                     </p>
-                    <a href="Portfolio.html">
+                    <a href="Project3.html">
                         <img class="Project-Image" src="tic-tac-toe-game-symbol-icon-in-line-style-design-isolated-on-white-background-editable-stroke-free-vector.jpg" alt="Project 3">
                     </a>
                     <p class="Project-Desc">
@@ -84,7 +84,7 @@
                     <p class="Project-Title">
                         Q-Bot Pathing
                     </p>
-                    <a href="Portfolio.html">
+                    <a href="Project4.html">
                         <img class="Project-Image" src="Qbot.png" alt="Project 4">
                     </a>
                     <p class="Project-Desc">
@@ -95,11 +95,22 @@
                     <p class="Project-Title">
                         Q-Arm Algorithm
                     </p>
-                    <a href="Portfolio.html">
+                    <a href="Project5.html">
                         <img class="Project-Image" src="QArm.jpg" alt="Project 5">
                     </a>
                     <p class="Project-Desc">
                         Coded a robot arm to transfer medical containers into autoclaves, capable of being controlled by a user.
+                    </p>
+                </li>
+                <li class="Project-Item">
+                    <p class="Project-Title">
+                        Math Mania
+                    </p>
+                    <a href="Project6.html">
+                        <img class="Project-Image" src="FastMathQuizLogo.png" alt="Project 6">
+                    </a>
+                    <p class="Project-Desc">
+                        An interactive GUI math game with simple operations and a timer. Stores scores in a leaderboard.
                     </p>
                 </li>
             </ul>
