--- a/Skills.html
+++ b/Skills.html
@@ -99,16 +99,48 @@
             <p class="Marco-Skills">Frameworks:</p>
             <ul class="Skills-List">
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="JavaFX_Logo.png" alt="JavaFX Logo">
+                    <img class="Skills-Icons" src="java.png" alt="JavaFX Logo">
                     <p class="Skills-Desc">JavaFX</p>
                 </li>
-                <li class="Skills-Item">    
-                    <img class="Skills-Icons" src="tensorflow.svg" alt="Tensorflow Logo">
-                    <p class="Skills-Desc">Tensorflow</p>    
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="flask.png" alt="Flask Logo">
+                    <p class="Skills-Desc">Flask</p>  
+                </li>
+            </ul>
+            <br>
+            <p class="Marco-Skills">Developer Tools:</p>
+            <ul class="Skills-List">
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="icons8-github.svg" alt="Github Logo">
+                    <p class="Skills-Desc">Github</p>
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="pandas.svg" alt="Pandas Logo">
-                    <p class="Skills-Desc">Pandas</p>  
+                    <img class="Skills-Icons" src="Maven.png" alt="Maven Logo">
+                    <p class="Skills-Desc">Maven</p>  
+                </li>
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="Linux.png" alt="Linux Logo">
+                    <p class="Skills-Desc">Linux</p>  
+                </li>
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="Git.png" alt="Git Logo">
+                    <p class="Skills-Desc">Git</p>  
+                </li>
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="visual-studio-code-icon-512x510-jfeof688.png" alt="VsCode Logo">
+                    <p class="Skills-Desc">VSCode</p>  
+                </li>
+            </ul>
+            <br>
+            <p class="Marco-Skills">Technical Skills:</p>
+            <ul class="Skills-List">
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="HardwareIcon.png" alt="Hardware Logo">
+                    <p class="Skills-Desc">Hardware</p>
+                </li>
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="CAD.png" alt="CAD Logo">
+                    <p class="Skills-Desc">CAD</p>
                 </li>
             </ul>
         </section>
